# ai-parsing-test-task

./: .gitignore  Makefile  pyproject.toml
app/: container.py  server.py
app/file/adapter/: dependencies.py
app/file/adapter/input/api/: __init__.py
app/file/adapter/input/api/v1/: file.py  websocket.py
app/file/adapter/output/persistence/: repository_adapter.py
app/file/adapter/output/persistence/sqlalchemy/: company.py
app/file/domain/: constants.py  enums.py  file_processing.py  schemas.py
app/file/domain/entity/: company.py  queries.py
app/file/domain/repository/: company.py
celery_task/: __init__.py
celery_task/tasks/: __init__.py  parse_file.py
core/: config.py
core/db/: session.py
docker/: Dockerfile  docker-compose.yml
migrations/: env.py
migrations/versions/: 78d5f9b13dc4_add_company.py
rag/: model.py
rag/file/: prompts.py  structured.py
